tests/fixtures/invalid/abs_3_args.py
# abs() takes at most 1 argument, got 3
x = abs(1, 1, 1)
